fix: changed behavior on navbar to collapse when click on links

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,9 @@
 @import "base";
 @import "atoms";
 @import "molecules";
+
+body{
+    padding-top: calc(56px + 2rem);
+    padding-bottom: 2rem;
+    min-height: 100vh;
+}
